# -

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-infra.txt  requirements-vision.txt  requirements.txt
docs/: README.md  conversation_agent_solution.md  implementation_plan.md  local_postgres_migration.md  packaging_strategy_method.md  production_docker_runbook.md  production_readiness_checks.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
harness/: pipeline.yaml
scripts/: dev_server.py  migrate_sqlite_to_postgres.py  production_smoke.py  run_golden_regression.py  smoke_designer_agent.py
tests/: conftest.py  test_api_workflow.py  test_asset_intelligence.py  test_asset_memory.py  test_audit_store.py  test_auth_dependencies.py  test_checkpoint.py  test_conversation_list_ranking.py  test_conversation_workbench.py  test_design_generation.py  test_document_parser.py  test_frontend_production_scaffold.py  test_golden_regression.py  test_graph_visual_context.py  test_image_analysis.py  test_image_understanding.py  test_integration_health.py  test_integration_probe.py  test_knowledge_store.py  test_memory_store.py  test_ocr.py  test_orchestrator_agent.py  test_parser_auto_image_analysis.py  test_persistence_config.py  test_production_smoke_script.py  test_project_crud.py  test_project_detail.py  test_project_store.py  test_prompt_registry.py  test_qc_rules.py  test_rate_limiter.py  test_readiness.py  test_review_console.py  test_review_reject_routing.py  (+8 more)
(+83 files in other folders)
